[package]
name = "lucidmq-cli"
version = "0.1.0"
description = "A short description of my package"
edition = "2021"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bdkiran/lucidmq"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucidmq = { path = "../lucidmq"}
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
