[package]
name = "lucidmq-cli"
version = "0.1.0"
description = "A short description of my package"
edition = "2021"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bdkiran/lucidmq"
license = "MIT"
build = "src/generate_schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"]}
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"
capnp  = "0.14"
shlex = "1.1.0"


[build-dependencies]
capnpc = "0.14"
