[package]
name = "lucidmq"
version = "0.1.0"
description = "Rust Library that Implements and Interfaces LucidMQ"
edition = "2021"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bdkiran/lucidmq"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lucidmq"
path = "src/lib.rs"

[dependencies]
nolan = { path = "../nolan" }
bincode="1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
rand = "0.8.5"
