[package]
name = "lucidmq"
version = "0.1.1"
description = "Rust Library that Implements and Interfaces LucidMQ"
edition = "2021"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bdkiran/lucidmq"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
env_logger = "0.9.0"
futures = "0.3.15"
tokio = { version = "1.0", features = ["full"]}
nolan = { path = "../nolan" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
rand = "0.8.5"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "*"
url = "2.0.0"