[package]
name = "lucidmq"
version = "0.1.1"
description = "Rust Library that Implements and Interfaces LucidMQ"
edition = "2021"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bdkiran/lucidmq"
license = "MIT"
build = "src/generate_schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "sync", "macros"]}
nolan = { path = "../nolan" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4"
rand = "0.8.5"
capnp  = "0.14"
#rcgen = "0.10.0"
#rustls = { version = "0.20.3", default-features = false, features = ["quic"] }
#quinn = "*"
#futures = "0.3.15"

[build-dependencies]
capnpc = "0.14"

[dev-dependencies]
rand="0.8.3"
tempdir = "0.3.7"