[package]
edition = "2021"
name = "node-lucidmq"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.6.0", default-features = false, features = ["napi6"] }
napi-derive = "2.6.0"
nolan = { path = "../nolan" }
bincode="1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8.5"
log = "0.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
