[package]
name = "nolan"
version = "0.1.0"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
edition = "2021"

[lib]
name = "nolan"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bincode="1.3.3"
serde = { version = "1.0", features = ["derive"] }