[package]
name = "nolan"
version = "0.1.1"
description = "Commitlog/WAL Implmentation and Powerful Abstractions"
edition = "2021"
authors = ["Burak Kiran <burakkiran95@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bdkiran/lucidmq"
license = "Apache-2.0"

[lib]
name = "nolan"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bincode="1.3.3"
serde = { version = "1.0", features = ["derive"] }