[package]
name = "pylucidmq"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pylucidmq"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
nolan = "0.1.1"
bincode="1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8.5"
log = "0.4"
